# collaborative-vibe-coder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: example_megatron_lm_debug_supervision.sh
src/collaborative_vibe_coder/: __init__.py  __main__.py  cli.py  monitor.py  session.py  store.py  supervise.py  supervise_entry.py
tests/: test_cli.py
